# battle_game_2024

./: .gitignore  CMakeLists.txt
localization/: eng.json  zhs.json
src/battle_game/: battle_game.cpp
src/battle_game/app/: app.cpp
src/battle_game/core/: CMakeLists.txt  selectable_units.cpp  unit.cpp  unit.h
src/battle_game/core/units/: huge_tank_reswaut.cpp  huge_tank_reswaut.h  tiny_tank.cpp  tiny_tank.h
src/battle_game/localization/: CMakeLists.txt  localization_manager.cpp  localization_manager.h
